[package]
name = "rust_lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_lib"
crate-type = ["cdylib"]

[dependencies]
argmin = "0.11.0"
image = "0.25.9"
kornia-rs = "0.1.5"
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = "0.27.0"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
rand = { version = "0.9.2", features = ["std_rng"] }
rerun = "0.27.2"

[patch.crates-io]
ndarray = { git = "https://github.com/rust-ndarray/ndarray.git", tag = "0.15.6" }
